--- a/css/styles.css
+++ b/css/styles.css
@@ -48,11 +48,13 @@ body {
   color: var(--grey-400);
   font-size: 17px;
 }
-.container {
-  width: 95%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+@media (max-width: 700px) {
+  body{
+    font-size: 13px;
+  }
+}
+h1{
+  margin: 0;
 }
 ul {
   list-style: none;
@@ -66,7 +68,12 @@ img {
 }
 
 /* ---- utilidades----- */
-
+.container {
+  width: 95%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .font-title {
   font-family: var(--font-title);
   font-weight: 700;
@@ -125,8 +132,19 @@ img {
   gap: 20px;
 }
 .menu__enlace {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: var(--grey-100);
+}
+
+@media (max-width: 800px) {
+  .container-banner {
+  flex-direction: column-reverse;
+  }
+  .banner-content,
+  .banner-image{
+    width: 100%; 
+  }
+  
 }
 
 /* ----- banner -----*/
@@ -134,20 +152,26 @@ img {
 .banner {
   clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
   background: var(--color-primary-300);
+  min-height: 500px;
+ padding-top: 2rem;
+ padding-bottom: 3rem;
 }
 .container-banner {
-  min-height: 600px;
+  min-height: 500px;
+}
+.banner__frases{
+  margin: 0;
+  height: 120px;
+  margin-bottom: 3rem;
 }
 .banner__title {
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: 2.2rem;
   margin-bottom: 2rem;
   color: var(--yellow-200);
 }
-
-.banner__copy {
+.banner__copy,.frases-autor {
   font-size: 1.2rem;
-  margin-bottom: 4rem;
 }
 .banner-content {
   width: 40%;
@@ -155,7 +179,27 @@ img {
 .banner-image {
   width: 50%;
 }
-
+@media (max-width: 800px) {
+  .container-banner {
+  flex-direction: column-reverse;
+  }
+  .banner-content,
+  .banner-image{
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  .banner-image{
+    width: 80%;
+  }
+.frases-autor{
+  text-align: right;
+}
+.btn-banner{
+  display:block;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+}
 /* ---- Quienes somos -----*/
 
 .quienesSomos .grid {
